# toucan-supergraph-demo

router/: .gitignore  Makefile  router-config.yaml  supergraph-config.yaml
services/app-store/: codegen.yml  package.json  tsconfig.json
services/app-store/src/: data-sources.ts  index.ts  schema.graphql
services/app-store/src/data/: apps.json  datasets.json  tenants.json
services/datasets/: .python-version  README.md  pyproject.toml  schema.graphql
services/datasets/src/datasets/: __init__.py  data_source.py  schema.py
services/storytelling/: .gitignore  codegen.yml  package.json
services/storytelling/src/: data-sources.ts  index.ts  schema.graphql
services/storytelling/src/data/: apps.json  datasets.json
ui/: codegen.yml  package.json
ui/src/: App.tsx  AppStore.tsx  Visualization.tsx  api.ts  main.tsx
